--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
             </section>
 
             <section class="box customize">
-                <h3 class="title">Personalizar</h3>
+                <h3 class="title">Personalize</h3>
                 <div class="actions">
                   <div class="password-length">
-                    <p>Tamanho: <span id="password-length-text">16</span></p>
+                    <p>Size: <span id="password-length-text">16</span></p>
                     <input
                       type="range"
                       name="password-length"
